src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Ventas</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contactado</fullName>
        </values>
        <values>
            <fullName>Interesado</fullName>
        </values>
        <values>
            <fullName>Lead</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>No contactado</fullName>
        </values>
        <values>
            <fullName>No interesado</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Antologia__c</fullName>
        <label>Antología</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApeMaterno__c</fullName>
        <description>Apellido Materno</description>
        <label>Apellido materno</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AplicaPromocionCero__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aplica promoción cero</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AsignacionAutomatica__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Asignación Automática del Prospecto</description>
        <label>Asignación automática</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beca__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beca</label>
        <referenceTo>Beca__c</referenceTo>
        <relationshipLabel>Candidatos</relationshipLabel>
        <relationshipName>Candidatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CP__c</fullName>
        <label>Código Postal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calificacion__c</fullName>
        <formula>IF(Text(Status )= &quot;Lead&quot;,IMAGE(&apos;/resource/LeadQuality/1Estrella.png&apos;,&apos;3Negativo.png&apos;), 
IF(Text(Status )= &quot;Contactado&quot;,IMAGE(&apos;/resource/LeadQuality/2Estrellas.png&apos;,&apos;3Negativo.png&apos;), 
IF(Text(Status )= &quot;Interesado&quot;,IMAGE(&apos;/resource/LeadQuality/3Estrellas.png&apos;,&apos;3Negativo.png&apos;),  
IMAGE(&apos;/resource/LeadQuality/3Estrellas.png&apos;,&apos;3Negativo.png&apos;) ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calificación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle__c</fullName>
        <label>Calle</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColegiaturaDescuento__c</fullName>
        <formula>Colegiatura__c -( Colegiatura__c *  PorcentajeBeca__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Colegiatura con descuento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Colegiatura__c</fullName>
        <label>Colegiatura</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Colonia__c</fullName>
        <label>Colonia</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConceptoInscripcion__c</fullName>
        <description>Concepto de Inscripción</description>
        <label>Concepto inscripción</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisponiblePromocionCero__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disponible promoción cero</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EstadoCivil__c</fullName>
        <description>Estado Civil del Candidato</description>
        <label>Estado civil</label>
        <picklist>
            <picklistValues>
                <fullName>Soltero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorciado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viudo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EstadoOtro__c</fullName>
        <label>Estado</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Estado</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ubicacion__c.TipoUbicacion__c</field>
                <operation>equals</operation>
                <value>Estado</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ubicacion__c</referenceTo>
        <relationshipLabel>Candidatos (Estado)</relationshipLabel>
        <relationshipName>Candidatos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExamenAdmision__c</fullName>
        <label>Examen de admisión</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FechaNacimiento__c</fullName>
        <description>Fecha de Nacimiento</description>
        <label>Fecha de nacimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FichaPago__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ficha de Pago</description>
        <label>Con ficha pago</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FolioCalculadora__c</fullName>
        <formula>IF(TEXT(TipoBeca__c)= &quot;Beca Calculadora&quot;, &quot;CAL&quot; &amp; text(DAY( datevalue(CreatedDate) ))&amp;text(month( datevalue(CreatedDate) ))&amp; text(year( datevalue(CreatedDate) ))&amp;  Folio__c,&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Folio calculadora</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folio__c</fullName>
        <displayFormat>C-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Folio</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>FormaPago__c</fullName>
        <globalPicklist>FormaPago</globalPicklist>
        <label>Forma de pago</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GrupoAsignado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Grupo al cual fue asignado el candidado</description>
        <label>Grupo asignado</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Grupo__c.OfertaEducativa__c</field>
                <operation>equals</operation>
                <valueField>$Source.OfertaEducativa__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Grupo__c</referenceTo>
        <relationshipLabel>Candidatos</relationshipLabel>
        <relationshipName>GrupoAsingado</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImporteTotal__c</fullName>
        <formula>Antologia__c +  ColegiaturaDescuento__c + InscripcionDescuento__c + ExamenAdmision__c +  Propedeutico__c +  Uniforme__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importe total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InscripcionDescuento__c</fullName>
        <formula>IF( AplicaPromocionCero__c , 0, Inscripcion__c -( Inscripcion__c * PorcentajeDescuento__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inscripción con descuento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inscripcion__c</fullName>
        <description>Monto de la Inscripción</description>
        <label>Inscripción</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LetraBeca__c</fullName>
        <globalPicklist>CategoriaLetra</globalPicklist>
        <label>Letra de Beca</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LlaveCandidato__c</fullName>
        <externalId>true</externalId>
        <label>Llave Candidato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedioDifusion__c</fullName>
        <description>Medio por el cual se entero de IEU</description>
        <label>Medio por el cual se entero</label>
        <picklist>
            <picklistValues>
                <fullName>Atención inmediata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CineCorreo electrónico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Espectacular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fachada de Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferias y eventos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoogleMensaje en el celular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parada de autobús</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pendones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Periódico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publicidad en camionesRadio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recibí una visita</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stand en PlazaTelevisión</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehículos con sonido</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ModalidadEjecutiva__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modalidad Ejecutiva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ModalidadOnline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modalidad Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ModalidadPresencial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modalidad Presencial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modalidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Modalidad</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo__c.TipoCatalogo__c</field>
                <operation>equals</operation>
                <value>Modalidad</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo__c</referenceTo>
        <relationshipLabel>Candidatos (Modalidad)</relationshipLabel>
        <relationshipName>Candidatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MotivoNoContactado__c</fullName>
        <description>Motivo por el cual no se contacto el candidato</description>
        <label>Motivo no contactado</label>
        <picklist>
            <picklistValues>
                <fullName>Temporal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Definitivo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MotivoNoInteresado__c</fullName>
        <label>Motivo no interesado</label>
        <picklist>
            <picklistValues>
                <fullName>Cambia de residencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falta de recursos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inscrito en otra institución</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No quiere estudiar en IEU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Municipio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Municipio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ubicacion__c.TipoUbicacion__c</field>
                <operation>equals</operation>
                <value>Municipio</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Ubicacion__c</referenceTo>
        <relationshipLabel>Candidatos (Municipio)</relationshipLabel>
        <relationshipName>Candidatos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nivel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Nivel</description>
        <label>Nivel</label>
        <referenceTo>Catalogo__c</referenceTo>
        <relationshipLabel>Candidatos (Nivel)</relationshipLabel>
        <relationshipName>Nivel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NombreConvenio__c</fullName>
        <label>Nombre de convenio</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumeroExterior__c</fullName>
        <label>Número exterior</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumeroInterior__c</fullName>
        <label>Número interior</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumeroMensualidades__c</fullName>
        <description>Numero de Colegiaturas del programa</description>
        <label>Número de colegiaturas</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_Mensualidades__c</fullName>
        <formula>OfertaEducativa__r.NumeroColegiaturas__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numero Mensualidades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfertaEducativa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Búsqueda de Oferta Educativa para el Canidato</description>
        <label>Oferta educativa</label>
        <referenceTo>OfertaEducativa__c</referenceTo>
        <relationshipLabel>Candidatos</relationshipLabel>
        <relationshipName>Candidatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pais__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>País</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ubicacion__c.TipoUbicacion__c</field>
                <operation>equals</operation>
                <value>País</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Ubicacion__c</referenceTo>
        <relationshipLabel>Candidatos</relationshipLabel>
        <relationshipName>Candidatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Periodo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Periodo</description>
        <label>Periodo</label>
        <referenceTo>Periodo__c</referenceTo>
        <relationshipLabel>Periodo</relationshipLabel>
        <relationshipName>Periodo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plantel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Plantel</description>
        <label>Plantel</label>
        <referenceTo>Plantel__c</referenceTo>
        <relationshipLabel>Candidatos</relationshipLabel>
        <relationshipName>Plantel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PorcentajeBeca__c</fullName>
        <description>Porcentaje de descuento en colegiaturas</description>
        <inlineHelpText>Porcentaje de beca en colegiatura</inlineHelpText>
        <label>% de beca en colegiatura</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PorcentajeDescuento__c</fullName>
        <description>Porcentaje de descuento en inscripción</description>
        <label>% de descuento en inscripción</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PotencialFuturo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Potencial Futuro</description>
        <label>Potencial futuro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Programa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Programa</description>
        <label>Programa</label>
        <referenceTo>Programa__c</referenceTo>
        <relationshipLabel>Candidatos</relationshipLabel>
        <relationshipName>Programa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promedio__c</fullName>
        <globalPicklist>Promedio</globalPicklist>
        <label>Promedio</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promotor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotor</label>
        <referenceTo>Promotor__c</referenceTo>
        <relationshipLabel>Candidatos</relationshipLabel>
        <relationshipName>Candidatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Propedeutico__c</fullName>
        <label>Propedéutico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sexo__c</fullName>
        <description>Genero del Candidato</description>
        <label>Sexo</label>
        <picklist>
            <picklistValues>
                <fullName>Masculino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Femenino</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SolicitudPromocion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solicitud de promoción</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubOrigenCandidato__c</fullName>
        <description>Sub Origen del Canidato</description>
        <label>Sub origen candidato</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>01800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atención inmediata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Becas Maestría</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calcula tu colegiatura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correos electrónicos personalizados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educación para todos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educaedu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferias &amp;Eventos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Números telefónicos locales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preinscripción</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redes sociales Varios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reunión informativa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trabajos.mx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tráfico de piso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verticales IEU (por programa)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertical IEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visitas de promoción</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whatsappend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zopim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TipoBeca__c</fullName>
        <globalPicklist>TipoBeca</globalPicklist>
        <label>Tipo de Beca</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TipoDescuentoOtorgado__c</fullName>
        <globalPicklist>TipoDescuento</globalPicklist>
        <label>Tipo descuento otorgado</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Uniforme__c</fullName>
        <label>Uniforme</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VigenciaDescuento__c</fullName>
        <label>Vigencia de descuento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Image_Url__c</fullName>
        <label>Facebook Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Picture__c</fullName>
        <formula>HYPERLINK(sf4twitter__Fcbk_Profile_Url__c,
IF( ( NOT( ISBLANK( sf4twitter__Fcbk_Image_Url__c) )), IMAGE( sf4twitter__Fcbk_Image_Url__c  ,sf4twitter__Fcbk_Profile_Url__c, 48, 48), sf4twitter__Fcbk_Profile_Url__c )
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facebook Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Profile_Url__c</fullName>
        <label>Facebook Profile Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_User_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Facebook User Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Username__c</fullName>
        <label>Facebook Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Follow_Status__c</fullName>
        <description>Click on link to change following status</description>
        <formula>HYPERLINK(
&apos;javascript:window.location=&quot;/apex/sf4twitter__TwitterFollow?lid=&apos; + Id + &apos;&quot; + ( ( (new RegExp(&quot;[\\?&amp;]isdtp=([^&amp;#]*)&quot;)).exec(window.location.href) == null )?&quot;&quot;: &quot;&amp;isdtp=vw&quot;) &apos;, 
IF(sf4twitter__followed__c == true,&apos;Yes&apos;, &apos;No&apos; ), 
&apos;_self&apos;  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Haga clic en el vínculo para cambiar el estado de seguimiento</inlineHelpText>
        <label>Following on Twitter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Klout_Number__c</fullName>
        <label>Klout Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Klout_Score__c</fullName>
        <formula>IF( ABS( sf4twitter__Klout_Number__c )  &gt; 0, TEXT( sf4twitter__Klout_Number__c ) + &apos;  &apos; + IMAGE($Setup.sf4twitter__Twitter_Public_Configuration__c.sf4twitter__Klout_Score_logo__c,&apos;Klout&apos;,17,90), &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Klout Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Bio__c</fullName>
        <label>Twitter Bio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Creation_Date__c</fullName>
        <label>Twitter Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Follower_count__c</fullName>
        <label>Twitter Follower count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Following_count__c</fullName>
        <label>Twitter Following count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Image_Url__c</fullName>
        <label>Twitter Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Last_tweet__c</fullName>
        <label>Twitter Last tweet</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Location__c</fullName>
        <label>Twitter Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Picture__c</fullName>
        <formula>HYPERLINK(
&apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c,
IF( ( NOT( ISBLANK( sf4twitter__Twitter_Image_Url__c ) )), IMAGE( sf4twitter__Twitter_Image_Url__c ,&apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c, 48, 48), 
IF( NOT( ISBLANK( sf4twitter__Twitter_Username__c ) ), &apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c, &apos;&apos; ) )
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Twitter Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Status_count__c</fullName>
        <label>Twitter Status count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_User_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Twitter User Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Username__c</fullName>
        <label>Twitter Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__followed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Followed</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Periodo__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Contactado,No contactado,No interesado</value>
        </filters>
        <label>Todos los leads abiertos</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Ventas</fullName>
        <active>true</active>
        <businessProcess>Ventas</businessProcess>
        <label>Ventas</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>